# yandex-images-parser

./: CMakeLists.txt  LICENSE  Makefile  Makefile.demo  README.md  demo.c  demo.sh  yandex_parser.pc.in
examples/: CMakeLists.txt  Makefile  image_example.c  pet_downloader.c  pet_downloader_single.c  video_example.c
include/: yandex_parser.h
src/: core.c  download.c  driver.c  files.c  multithread.c  utils.c
